Add login failure page

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3,6 +3,11 @@
     margin: auto;
 }
 
+.failed-login {
+    background-color: lightcoral;
+    font-weight: bold;
+}
+
 html{
     position: relative;
     min-height: 100%;
