--- a/views/login.pug
+++ b/views/login.pug
@@ -23,6 +23,6 @@ body(class="text-dark bg-white")
             button(type="submit" class="btn btn-primary") Submit
         |
         div
-            a(href="./register") Not registered? Join now!
+            a(href="./register.pug") Not registered? Join now!
 
 include includes/footer.html
