--- a/views/index.pug
+++ b/views/index.pug
@@ -24,9 +24,10 @@ body(class="text-dark bg-white")
                 | quis consequatur accusamus cumque dolorem perferendis natus dicta et ipsa minima numquam!
         div(class="videos")
             h3(id="trend" class="text-center") Trending
-            div(class="text-center")
+            div(id="videos" class="text-center")
                 iframe(id="v1" width="420" height="315" src="https://www.youtube.com/embed/rmCXZ8ECRdE")
                 iframe(id="v2" width="420" height="315" src="https://www.youtube.com/embed/BDZBmD62W_0")
+                br
                 |
                 |
                 button(id="view1" type="submit" class="btn btn-secondary col-2 offset-1") View Piece
