Add piece uploading/downloading

--- a/views/includes/signout_header.html
+++ b/views/includes/signout_header.html
@@ -10,6 +10,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="./">Home</a>
                 </li>
+                <li>
+                    <a class="nav-link" href="./postPiece">Post a Piece</a>
+                </li>
             </ul>
             <div>
                 <a class="float-right" href="./logout">Sign Out</a>
