Make searching produce a list of results

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,10 +11,7 @@ body(class="text-dark bg-white")
         |
         |
         div(class="col-8 offset-2")
-            form(action="/searchResults" method="POST")
-                div(class="row")
-                    input(type="text" class="form-control col-8" name="Title" placeholder="Sheet, composer, piece...")
-                    button(type="submit" class="btn btn-primary col-3 offset-1") Search
+            include includes/searchbar.pug
         div(id="describe" class="description")
             h3 Who are we?
             p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium reiciendis facilis, 
