--- a/public/css/site.css
+++ b/public/css/site.css
@@ -94,6 +94,14 @@ body {
     background-color: burlywood;
 }
 
+.review-box {
+    background-color: white;
+    border: solid black;
+    border-width: 2px;
+    padding: 10px;
+    margin-bottom: 2px;
+}
+
 #search-results {
     list-style-type: square;
     margin-top: 80px;
