--- a/views/index.pug
+++ b/views/index.pug
@@ -22,8 +22,8 @@ body(class="text-dark bg-white")
         div(class="videos")
             h3(id="trend" class="text-center") Trending
             div(id="videos" class="text-center")
-                iframe(id="v1" width="420" height="315" src="https://www.youtube.com/embed/rmCXZ8ECRdE")
-                iframe(id="v2" width="420" height="315" src="https://www.youtube.com/embed/BDZBmD62W_0")
+                iframe(id="v1" width="420" height="315" src="https://www.youtube.com/embed/vNFqj9OJYb4")
+                iframe(id="v2" width="420" height="315" src="https://www.youtube.com/embed/Z4ME2cdXHVE")
                 br
                 |
                 |
