--- a/views/login.pug
+++ b/views/login.pug
@@ -25,4 +25,4 @@ body(class="text-dark bg-white")
         div
             a(href="./register") Not registered? Join now!
 
-include includes/footer.html
+//include includes/footer.html
