--- a/public/css/site.css
+++ b/public/css/site.css
@@ -100,6 +100,10 @@ body {
     padding: 20px;
 }
 
+.view-profile {
+    margin-left: 20px;
+}
+
 .review-box {
     background-color: white;
     border: solid black;
