--- a/views/includes/signout_header.html
+++ b/views/includes/signout_header.html
@@ -17,6 +17,9 @@
             <div>
                 <a class="float-right" href="./logout">Sign Out</a>
             </div>
+            <div>
+                <a class="float-right view-profile" href="./userProfile">View Profile</a>
+            </div>
         </div>
     </div>
 </nav>
