fixed piece information on piece page

--- a/views/piece.pug
+++ b/views/piece.pug
@@ -18,10 +18,9 @@ body(class="text-dark bg-white")
             div(class="row col-6")
                 ul(id="list" class="list-group", "list-group-flush")
                     li.list-group-item= "Composer: " + (pieceData.ComposerName || "Unknown")
-                    li.list-group-item= "Composer: " + (pieceData.ComposerName || "Unknown")
-                    li.list-group-item= "Composer: " + (pieceData.ComposerName || "Unknown")
-                    li.list-group-item= "Composer: " + (pieceData.ComposerName || "Unknown")
-                    li.list-group-item= "Composer: " + (pieceData.ComposerName || "Unknown")
+                    li.list-group-item= "Publisher: " + (pieceData.PublisherName || "Unknown")
+                    li.list-group-item= "Time Uploaded: " + (pieceData.TimeUploaded || "Unknown")
+                    li.list-group-item= "Copyright: " + (pieceData.Copyright || "Unknown")
 
                 div(id="review-div" class="col-12")
                     .card
