--- a/views/includes/searchbar.pug
+++ b/views/includes/searchbar.pug
@@ -1,4 +1,4 @@
 form(action="/searchResults" method="POST")
         div(class="row")
-            input(type="text" class="form-control col-8" name="Title" placeholder="Sheet, composer, piece...")
+            input(type="text" class="form-control col-8" name="Title" placeholder="Sheet music tag, title...")
             button(type="submit" class="btn btn-primary col-3 offset-1") Search
